--- a/crates/claw-runtime/Cargo.toml
+++ b/crates/claw-runtime/Cargo.toml
@@ -24,6 +24,7 @@ tokio = { workspace = true }
 tracing = { workspace = true }
 uuid = { workspace = true }
 chrono = { workspace = true }
+cron = { workspace = true }
 dirs = { workspace = true }
 reqwest = { workspace = true }
 libc = { workspace = true }
