feat: enhance scheduler with deduplication and new tools
- Added deduplication logic to the cron scheduler to prevent duplicate tasks based on label and cron expression.
- Introduced new tools: `cron_list` for listing scheduled tasks and `cron_cancel` for removing tasks by ID.
- Implemented server-sent events (SSE) for real-time notifications of cron results.
- Updated documentation links in service and install scripts to reflect new repository.
- Improved tool result summary extraction in the web app for better user experience.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ version = "0.1.0"
 edition = "2024"
 license = "MIT"
 authors = ["Claw Contributors"]
-repository = "https://github.com/claw/claw"
+repository = "https://github.com/props-nothing/claw"
 description = "Universal autonomous AI agent runtime"
 
 [workspace.dependencies]
