--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,8 +36,8 @@ async-stream = "0.3"
 # Serialization
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-toml = "0.8"
-toml_edit = "0.22"
+toml = "1.0"
+toml_edit = "0.25"
 
 # Error handling
 thiserror = "2"
@@ -49,42 +49,42 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 
 # HTTP & networking
-reqwest = { version = "0.12", features = ["json", "stream", "multipart", "rustls-tls"], default-features = false }
+reqwest = { version = "0.13", features = ["json", "stream", "multipart", "rustls", "query"], default-features = false }
 axum = { version = "0.8", features = ["ws"] }
 tower = "0.5"
 tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
 hyper = { version = "1", features = ["full"] }
 
 # Database
-rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
+rusqlite = { version = "0.38", features = ["bundled", "vtab"] }
 deadpool = "0.12"
 
 # WASM plugin host
-wasmtime = "28"
+wasmtime = "41"
 
 # Crypto & security
 ring = "0.17"
 base64 = "0.22"
 uuid = { version = "1", features = ["v4", "serde"] }
-rand = "0.8"
+rand = "0.10"
 blake3 = { version = "1", default-features = false, features = ["std", "pure"] }
 
 # P2P / mesh
-libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "identify", "kad", "tokio", "macros"] }
+libp2p = { version = "0.56", features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "identify", "kad", "tokio", "macros"] }
 
 # CLI
 clap = { version = "4", features = ["derive", "env"] }
 clap_complete = "4"
-dialoguer = "0.11"
-indicatif = "0.17"
-console = "0.15"
+dialoguer = "0.12"
+indicatif = "0.18"
+console = "0.16"
 
 # Time
 chrono = { version = "0.4", features = ["serde"] }
-cron = "0.13"
+cron = "0.15"
 
 # WebSocket
-tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
+tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
 futures-util = "0.3"
 
 # Misc
@@ -97,7 +97,7 @@ url = { version = "2", features = ["serde"] }
 semver = { version = "1", features = ["serde"] }
 regex = "1"
 dirs = "6"
-notify = "7"
+notify = "8"
 tempfile = "3"
 libc = "0.2"
 qrcode = "0.14"
